force-app/main/default/objects/Account/fields/AKAK__c.field-meta.xml
<CustomField>
    <fullName>AKAK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AKAK</label>
    <type>Checkbox</type>
</CustomField>