force-app/main/default/objects/Account/fields/chk_1__c.field-meta.xml
<CustomField>
    <fullName>chk_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>chk_1</label>
    <type>Checkbox</type>
</CustomField>