force-app/main/default/objects/Account/fields/Hail__c.field-meta.xml
<CustomField>
    <fullName>Hail__c</fullName>
    <label>Hail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>