force-app/main/default/objects/Account/fields/IAUA__c.field-meta.xml
<CustomField>
    <fullName>IAUA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAUA</label>
    <type>Checkbox</type>
</CustomField>