force-app/main/default/objects/Account/fields/ikl__c.field-meta.xml
<CustomField>
    <fullName>ikl__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ikl</label>
    <type>Checkbox</type>
</CustomField>