force-app/main/default/objects/Account/fields/iklh__c.field-meta.xml
<CustomField>
    <fullName>iklh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iklh</label>
    <type>Checkbox</type>
</CustomField>