force-app/main/default/objects/Account/fields/ink__c.field-meta.xml
<CustomField>
    <fullName>ink__c</fullName>
    <label>ink</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>