force-app/main/default/objects/Account/fields/JJAA__c.field-meta.xml
<CustomField>
    <fullName>JJAA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JJAA</label>
    <type>Checkbox</type>
</CustomField>