force-app/main/default/objects/Account/fields/job1__c.field-meta.xml
<CustomField>
    <fullName>job1__c</fullName>
    <label>job1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>