force-app/main/default/objects/Account/fields/job2__c.field-meta.xml
<CustomField>
    <fullName>job2__c</fullName>
    <label>job2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>