force-app/main/default/objects/Account/fields/job3__c.field-meta.xml
<CustomField>
    <fullName>job3__c</fullName>
    <label>job3</label>
    <length>12</length>
    <type>Text</type>
</CustomField>