force-app/main/default/objects/Account/fields/KAJS__c.field-meta.xml
<CustomField>
    <fullName>KAJS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KAJS</label>
    <type>Checkbox</type>
</CustomField>