force-app/main/default/objects/Account/fields/KKAL__c.field-meta.xml
<CustomField>
    <fullName>KKAL__c</fullName>
    <label>KKAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>