force-app/main/default/objects/Account/fields/NANA__c.field-meta.xml
<CustomField>
    <fullName>NANA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NANA</label>
    <type>Checkbox</type>
</CustomField>