force-app/main/default/objects/Account/fields/Testa__c.field-meta.xml
<CustomField>
    <fullName>Testa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testa</label>
    <type>Checkbox</type>
</CustomField>