force-app/main/default/objects/Account/fields/TestMn__c.field-meta.xml
<CustomField>
    <fullName>TestMn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestMn</label>
    <type>Checkbox</type>
</CustomField>