force-app/main/default/objects/Account/fields/Testng__c.field-meta.xml
<CustomField>
    <fullName>Testng__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testng</label>
    <type>Checkbox</type>
</CustomField>