force-app/main/default/objects/Account/fields/TesytCheck__c.field-meta.xml
<CustomField>
    <fullName>TesytCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TesytCheck</label>
    <type>Checkbox</type>
</CustomField>