force-app/main/default/objects/Account/validationRules/TestV.validationRule-meta.xml
<ValidationRule>
    <fullName>TestV</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Phone) &amp;&amp; NOT(Bypass__c)</errorConditionFormula>
    <errorMessage>TestV</errorMessage>
</ValidationRule>