force-app/main/default/objects/Account/validationRules/TestValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TestValidation</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(Name, &quot;^[0-9].*&quot;)</errorConditionFormula>
    <errorMessage>TestValid</errorMessage>
</ValidationRule>